tests/ui/exhaustive/switch_boolean_partial.lm
fn foo(kind: Boolean) -> Int32 {
    switch kind {
        true => 1_i32,
    }
}
